Also added ActionControllerCommands class for holding static constants for each command.
Added getChildAtIndex() method to AbstractSynchronizedActionGroup.
Added removeTrigger() and removeEventTrigger() to AbstractSynchronizedAction.
Added setTime() to Timestamp
Added new class TimestampUtil with add(), subtract() methods.
Added minimum and maximum modifiers to Random.ease function.
Cleaned up performance of some functions with sounds and groups.
Changed Tween's 'targetProperty' getter and setter to 'value' 
Made startTimeIsElapsed and durationIsElapsed public read-only properties.
Moved some as3 library files to an externally linked library

===== v0.3.1 (2007.09.28) =====
Moved code into a Flex Library Project (and moved demo to a seperate as3 project). Destroyed old repository.
Added a User's Guide to the docs folder

===== v0.3 (2007.07.07) =====
Created SVN repository at http://svn.mimswright.com/kitchensync/
renamed project to KitchenSync. Moved code to src folder
Added asdoc pages in the /bin/docs folder.
renamed com.mimswright.animation to com.mimswright.sync
optimized the way that actions listen to synchronizer
ensured the re-usability of action classes
added autoDelete flag which deletes actions on complete if true
Tested and tweaked the SynchronizedSound class
Added addTrigger() and addEventTrigger() to AbstractSyncrhonizedAction so that actions can be triggered by other actions or by events
Added clone() method to most SynchronizedAction classes
Added cloneWithTarget() method to Tween class
Added reverse() and cloneReversed() methods to the Tween class
added reverseChildOrder() to ActionGroup
removed shortcuts for amplitude, period, and overshoot
Added snapToValueOnComplete and snapToWholeNumber to Tween class
Added documentation to easing functions
Moved Sine.oscillate() to Oscillate.sine()
Added absoluteSine(), sawtooth(), and pulse() to the Oscillate class
Added Sextic easing class